# vespa-SPLADE-trial

./: README.md  pyproject.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
dataset/: small.csv.bz2
scripts/: feeder.py
vespa-config/: services.xml  validation-overrides.xml
vespa-config/schemas/: simplewiki.sd
